fixed work boxes on mobile

--- a/style.css
+++ b/style.css
@@ -932,22 +932,20 @@
             /*margin-left: -1em;*/
         }
         .worksec .centerboxes .portfolio-box {
-            width: 250px;
-            height: 330px;
+            width: 380px;
+            height: 450px;
             padding: 1em;
             margin-bottom: 2em;
         }
         .worksec .centerboxes .athenahacks-box {
-            width: 250px;
-            height: 330px;
+            width: 380px;
+            height: 450px;
             padding: 1em;
-            margin-bottom: 2em;
         }
         .worksec .centerboxes .melodics-box {
-            width: 250px;
-            height: 330px;
+            width: 380px;
+            height: 450px;
             padding: 1em;
-            margin-bottom: 2em;
         }
         /*.worksec .centerboxes .courseplanner-box {
             width: 250px;
